<resources>
    <string name="app_name">Jeva</string>
    <string name="title_explore">Explorar</string>
    <string name="title_myroutes">Mis rutas</string>
    <string name="title_activity_show_route">Ver ruta</string>
    <string name="title_activity_edit_route">Editar ruta</string>
    <string name="cardview_edit">Editar</string>
    <string name="cardview_see">Ver</string>
    <string name="change_email">Cambiar email</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="change_language">Cambiar idioma</string>
    <string name="checkInternet">Compruebe la conexión a internet</string>
    <string name="errorUploadPhoto">Hubo un error al subir la imagen</string>
    <string name="cannotDeletePhoto">No se pudo eliminar la foto</string>
    <string name="popUpRouteMarkerTitle">Datos del marcador</string>
    <string name="popUpRouteRouteTitle">Datos de la ruta</string>
    <string name="titulo">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="close">CERRAR</string>
    <string name="delete">BORRAR</string>
    <string name="accept_permissions">Acepte los permisos</string>
    <string name="location_justification">Empleamos la ubicación para ofrecerle rutas cercanas</string>
    <string name="gallery_justification">Usamos el acceso a la galería para subir fotos propias</string>
    <string name="storage_language_justification">Accedemos al almacenamiento para almacenar preferencias de idiomas</string>
    <string name="okay">Vale</string>
    <string name="udateRouteError">Error al actualizar la ruta</string>
    <string name="deleteRouteError">Error al eliminar la ruta</string>
    <string name="updateMarkerError">Error al eliminar el marcador</string>
    <string name="deleteMarkerError">Error al eliminar el marcador</string>
    <string name="createMarkerError">Error al crear el marcador</string>
    <string name="getNearbyRoutesError">Error al cargar las rutas cercanas</string>
    <string name="dragMarkerError">Error al actualizar posición del marcador</string>
    <string name="title_change_pwd">Cambiar contraseña</string>
    <string name="title_change_email">Cambiar email</string>
    <string name="hint_old_email">Email anterior</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_new_email">Nuevo email</string>
    <string name="button_change">cambiar</string>
    <string name="hint_repeat_new_password">Repetir nueva contraseña</string>
    <string name="hint_new_password">Nueva contraseña</string>
    <string name="hint_old_password">Contraseña anterior</string>
    <string name="hint_email">Email</string>
    <string name="no_title">Sin título</string>
    <string name="not_valid_email">Introduce un email válido</string>
    <string name="not_valid_password">La contraseña debe de tener al menos 6 caracteres</string>
    <string name="email_not_registered">El email no se encuentra registrado</string>
    <string name="incorrect_password">Contraseña incorrecta</string>
    <string name="error_occurred">Ha ocurrido un error, inténtelo de nuevo</string>
    <string name="passwords_dont_match">Las contraseñas no coinciden</string>
    <string name="email_in_use">El email ya se encuentra en uso</string>
    <string name="password_reset_sent">Email de recuperación enviado</string>
    <string name="not_valid_newEmail">Introduce un email nuevo válido</string>
    <string name="user_data_updated">Los datos del usuario han sido actualizados</string>
    <string name="invalid_credentials">Credenciales incorrectas</string>
    <string name="account_disabled_or_deleted">La cuenta ha sido deshabilitada o eliminada</string>
    <string name="show_route_details">"Ver en detalle"</string>
</resources>